2009-05-23  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (LIVECONNECT_DIR): Add -C lib/rt net.
	(rt-closed.jar): Don't unconditionally add -C lib/rt net.

2009-05-22  Andrew John Hughes  <ahughes@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp:
	Define InlineSmallCode, using x86 value to begin with.

2009-05-22  Mark Wielaard  <mark@klomp.org>

	* patches/xrender/icedtea-002.patch: Correct rebase. Add
	Java_sun_java2d_x11_XSurfaceData_isDrawableValid and
	Java_sun_java2d_x11_XSurfaceData_setInvalid back.

2009-05-22  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed typo.

2009-05-22  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Copy over Nimbus source files manually
	rather than using generated as GENSRC
	to avoid conflicts with IcedTea6.

2009-05-22  Mark Wielaard  <mark@klomp.org>

	* Makefile.am(ICEDTEA_PATCHES): patches/icedtea-samejvm-safe.patch
	added.
	* patches/icedtea-samejvm-safe.patch: Add packages that are
	samejvm-safe to TEST.ROOT.
	* test/jtreg/excludelist.jdk.jtx: Add java/awt/FontClass/CreateFont
	tests. Hangs jtreg test suite.

2009-05-22  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/*,
	overlays/openjdk/jdk/test/com/sun/media/sound/*:
	Import Gervill fixes from CVS. See CHANGES.txt:

	6823446: Gervill SoftLowFrequencyOscillator fails when freq is
	set to 0 cent or 8.1758 Hz.
	6823445: Gervill SoftChannel/ResetAllControllers jtreg test
	fails after portamento fix from last merge.
	6821030: Merge OpenJDK Gervill with upstream sources, Q1CY2009

	- Fix: Notes get stuck on when we overflow the synthesizer
	with rapid note on /off messages.
	JTreg test has been created:
	test/com/sun/media/sound/SoftChannel/NoteOverFlowTest
	- Fix: Portamento controller reset to wrong value in
	SoftChannel.resetAllControllers.
	This caused incorrect glider effect in some midi files.
	For example in TuningApplet1 in TET-7 keyboard,